# todo-aiogram-bot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
bot/: add_task.py  bot.py  config.py  delete_task.py  edit_task.py  messages.py  states.py  utils.py
core/apps/tasks/: admin.py  apps.py  constants.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
core/apps/tasks/migrations/: 0001_initial.py  0002_task_reminder_sent_at.py
core/project/: celery.py  settings.py  urls.py
docker/: Dockerfile.bot  Dockerfile.django  docker-compose.prod.yml  docker-compose.yml
