[project]
name = "todo-aiogram-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "MaxBakshaev",email = "risen.2011@mail.ru"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
