[project]
name = "todo-aiogram-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "MaxBakshaev",email = "risen.2011@mail.ru"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "aiogram-dialog (>=2.4.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "django-filter (>=25.2,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
